# vector-dropper

./: ArcDropper.lib  CHANGELOG.txt  RCSBuilder.sln  VERSION.txt  uninstall.pkg
RCSBlackberryDropper/: RCSBlackberryDropper.cpp  RCSBlackberryDropper.vcproj  dropper.h  fileutils.h  sign.cpp
RCSBlackberryPolymer/: RCSBlackberryPolymer.cpp  RCSBlackberryPolymer.vcproj  polymer.h  sign.cpp  stdafx.cpp
RCSDropper/: .sconsign.dblite  Buffer.h  Chunk.cpp  Chunk.h  Directory.h  DropperCode.cpp  DropperCode.h  DropperHeader.h  DropperObject.cpp  DropperObject.h  DropperSection.cpp  DropperSection.h  Exceptions.h  FileBuffer.cpp  FileBuffer.h  GenericSection.cpp  GenericSection.h  IATEntry.h  Manifest.cpp  Manifest.h  MeltFile.cpp  MeltFile.h  PEObject.cpp  PEObject.h  PEParser.h  RCSDropper.cpp  RCSDropper.vcproj  RCSWin32Dropper.cpp  RCSWin32Dropper.rc  RCSWin32Dropper1.rc  ResourceDataEntry.cpp  ResourceDataEntry.h  ResourceDirectory.cpp  ResourceDirectory.h  ResourceDirectoryEntry.cpp  ResourceDirectoryEntry.h  ResourceSection.cpp  ResourceSection.h  ResourceTuner.cpp  SConstruct  (+12 more)
RCSIphonePolymer/: RCSIphonePolymer.cpp  RCSIphonePolymer.h  RCSIphonePolymer.vcproj
RCSMDropper/: RCSMDropper.cpp  RCSMDropper.vcproj  RCSWinMoDropper.cpp  dropper.h
RCSMPolymer/: RCSMPolymer.cpp  RCSMPolymer.vcproj  RCSWinMoPolymer.cpp  polymer.h  sign.cpp  stdafx.h
RCSMacDropper/: FATDropper.c  Makefile  RCSMacCommon.h  RCSMacDropper.c  RCSMacDropper.cpp  RCSMacDropper.h  RCSMacDropper.vcproj  RCSMacInfector.c  RCSMacInfector.cpp  RCSMacInfector.h  RCSMacInfectorErrors.h  RCSMacInfectorUtil.c  RCSMacInfectorUtil.cpp  RCSMacInfectorUtil.h
RCSMacPolymer/RCSMacPolymer/: RCSMacPolymer.cpp  RCSMacPolymer.h  RCSMacPolymer.vcproj
RCSPolymer/: RCSPolymer.cpp  RCSPolymer.vcproj  RCSWin32Polymer.cpp  peutils.h  polymer.h  stdafx.h
RCSStreamingMelter/: .cproject  .project  CMakeLists.txt  MelterConfig.h.in  cooker.sln
RCSStreamingMelter/AsmJit/: CMakeLists.txt  configure-linux-release.sh
RCSStreamingMelter/AsmJit/AsmJit/: Util.h
RCSStreamingMelter/beaEngine/: BeaEngine.h
RCSStreamingMelter/beaEngine/Includes/: export.h
RCSStreamingMelter/cooker/: CMakeLists.txt  Components.cpp  Components.h  Cooker.cpp  Cooker.h  DropperCode.cpp  DropperCode.h  DropperCodeScout.cpp  DropperCodeScout.h  GenericPayload.cpp  GenericPayload.h  RCS.cpp  RCS.h  RCSConfig.cpp  RCSConfig.h  RCSCooker.rc  RCSPayload.cpp  RCSPayload.h  XRefNames.h  cooker.vcproj  depack.h  macro.h  main.cpp  reloc.h  resource.h  smc.h
RCSStreamingMelter/include/: DropperHeader.h  common.h  melt.h  win32types.h
RCSStreamingMelter/lib/: BIO_melt.cpp  CMakeLists.txt  Chunk.h  Common.cpp  Common.h  CookerVersion.h  DataCarrier.h  DataState.h  Defective.cpp  Defective.h  Events.h  InjectDropper.cpp  InjectDropper.h  InjectStage1Trampoline.cpp  InjectStage1Trampoline.h  ParseEntryPoint.cpp  ParseEntryPoint.h  ParseHeaders.cpp  ParseHeaders.h  Parsing.cpp  Parsing.h  ParsingError.h  RCSDropper.cpp  RCSDropper.h  StreamingMelter.cpp  StreamingMelter.h  debug.h  hook.h  main.cpp
RCSStreamingMelter/melter/: CMakeLists.txt  main.cpp
RCSStreamingMelter/nbproject/: Makefile-Default.mk  Makefile-impl.mk  Makefile-variables.mk  Package-Default.bash  configurations.xml  project.xml
RCSStreamingMelter/nbproject/private/: configurations.xml
RCSStreamingMelter/php/: config.m4  php_melter.c  php_melter.h
RCSSymbianDropper/: RCSSymbianDropper.cpp  RCSSymbianDropper.vcproj  dropper.h  sign.cpp
RCSSymbianPolymer/: RCSSymbianPolymer.cpp  RCSSymbianPolymer.vcproj  fileutils.h  polymer.h  sign.cpp  stdafx.h
libs/AsmJit/: AsmJit.h  AsmJit.lib  CompilerX86X64.h  CpuInfo.h  DefsX86X64.h  SerializerX86X64.h
libs/BeaEngine/: BeaEngine.h  BeaEngine.lib
libs/aPlib/: aplib.lib
libs/openssl/: libeay32-debug-e.lib  libeay32-debug.lib  libeay32-release.lib  libeay32.lib  ssleay32-debug-e.lib  ssleay32-debug.lib  ssleay32-release.lib  ssleay32.lib
mxml/: mxml-attr.c  mxml-entity.c  mxml-file.c  mxml-index.c  mxml-node.c  mxml-private.c  mxml-private.h  mxml-search.c  mxml-set.c  mxml-string.c
mxml/vcnet/: config.h  mxml1.vcproj
